@@ -1,3 +1,10 @@
+2009-01-22  Ryan Lortie  <desrt@desrt.ca>
+
+	Bug 568741 – g_buffered_input_stream_fill_async doesn't work
+
+	* gbufferedinputstream.c (fill_async_callback): grow the buffer tail
+	after we have successfully read data from the base stream
+
 2009-01-20  Ryan Lortie  <desrt@desrt.ca>
 
 	Bug 568394 – dropping the last reference to a stream filter closes the
